--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -26,7 +26,7 @@
       <div class="header-first-level">
 
 
-        <form class="search-wrapper">
+        <form class="search-wrapper" tabindex="0">
           <label class="visually-hidden" for="search-button-input">Поле поиска</label>
           <input type="search" name="search-input" id="search-button-input" placeholder="Поиск по сайту">
           <button class="search-button" type="submit">найти</button>
@@ -48,34 +48,31 @@
 
       <div class="header-second-level">
         <div class="main-menu">
+          <div class="catalog-menu-item">
+            <a class="catalog" href="#">каталог товаров</a>
+            <ul class="header-catalog-list">
+              <li>
+                <a class="header-catalog-item" href="#">Виртуальная реальность</a>
+              </li>
+              <li>
+                <a class="header-catalog-item" href="#">Фитнес-браслеты</a>
+              </li>
+              <li>
+                <a class="header-catalog-item" href="#">Квадрокоптер</a>
+              </li>
+              <li>
+                <a class="header-catalog-item" href="catalog.html">Моноподы для селфи</a>
+              </li>
+              <li>
+                <a class="header-catalog-item" href="#">Умные часы</a>
+              </li>
+              <li>
+                <a class="header-catalog-item" href="#">Экшн-камеры</a>
+              </li>
+            </ul>
+          </div>
 
           <ul class="main-menu-list">
-
-            <li class="catalog-menu-item">
-              <a class="catalog" href="#">каталог товаров</a>
-
-              <ul class="header-catalog-list">
-                <li>
-                  <a class="header-catalog-item" href="#">Виртуальная реальность</a>
-                </li>
-                <li>
-                  <a class="header-catalog-item" href="#">Фитнес-браслеты</a>
-                </li>
-                <li>
-                  <a class="header-catalog-item" href="#">Квадрокоптер</a>
-                </li>
-                <li>
-                  <a class="header-catalog-item" href="catalog.html">Моноподы для селфи</a>
-                </li>
-                <li>
-                  <a class="header-catalog-item" href="#">Умные часы</a>
-                </li>
-                <li>
-                  <a class="header-catalog-item" href="#">Экшн-камеры</a>
-                </li>
-              </ul>
-            </li>
-
             <li>
               <a class="delivery" href="#">доставка</a>
             </li>
@@ -89,20 +86,17 @@
         </div>
       </div>
 
-
     </nav>
   </header>
 
   <main>
 
     <div class="slider container">
-
       <div class="slider-toggles">
         <button class="slider-toggle slider-toggle-active" type="button" aria-label="Первый слайд"></button>
         <button class="slider-toggle" type="button" aria-label="Второй слайд"></button>
         <button class="slider-toggle" type="button" aria-label="Третий слайд"></button>
       </div>
-
 
       <ol class="slider-list">
 
@@ -166,7 +160,6 @@
           </div>
         </li>
       </ol>
-
     </div>
 
     <section class="category container">
@@ -195,73 +188,63 @@
 
     <section class="service">
       <h2 class="visually-hidden">Сервис</h2>
-
       <div class="service-wrapper container">
-
         <div class="service-aside-block">
           <button class="service-button delivery-button service-active-button" type="button">доставка</button>
           <button class="service-button warranty-button" type="button">гарантия</button>
           <button class="service-button credit-button" type="button">кредит</button>
         </div>
 
-        <div>
-          <ul class="service-list">
-            <li class="service-delivery">
-              <p class="service-head">Доставка</p>
-              <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
-                подъезду совершенно бесплатно! Ведь мы неплохо <br>
-                заработаем, поднимая его на ваш этаж.</p>
-            </li>
-            <li class="service-warranty">
-              <p class="service-head">Гарантия</p>
-              <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
-                не переживайте, мы выдадим вам новый. <br>
-                Товар, не дом, конечно же.<br>
-            </li>
-            <li class="service-credit">
-              <p class="service-head ">Кредит</p>
-              <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
-                подберут для вас наиболее выгодные <br>
-                условия кредита. Выгодные для нашего банка, разумеется.
-            </li>
-          </ul>
-        </div>
-
-      </div>
-    </section>
-
-    <div class="brands-wrapper">
-      <div class="container">
-        <ul class="brands">
-          <li>
-            <a href="#">
-              <img class="brands-img" src="img/logo/logo-1dji.png" width="260" height="100" alt="Логотип DJI">
-            </a>
+        <ul class="service-list">
+          <li class="service-delivery">
+            <p class="service-head">Доставка</p>
+            <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
+              подъезду совершенно бесплатно! Ведь мы неплохо <br>
+              заработаем, поднимая его на ваш этаж.</p>
           </li>
-          <li>
-            <a href="#">
-              <img class="brands-img" src="img/logo/logo-2gadgets.png" width="260" height="100"
-                alt="Логотип SP Gadgets">
-            </a>
+          <li class="service-warranty">
+            <p class="service-head">Гарантия</p>
+            <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
+              не переживайте, мы выдадим вам новый. <br>
+              Товар, не дом, конечно же.<br>
           </li>
-          <li>
-            <a href="#">
-              <img class="brands-img" src="img/logo/logo-3gopro.png" width="260" height="100" alt="Логотип GoPro">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img class="brands-img" src="img/logo/logo-4vive.png" width="260" height="100" alt="Логотип Vive">
-            </a>
+          <li class="service-credit">
+            <p class="service-head ">Кредит</p>
+            <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
+              подберут для вас наиболее выгодные <br>
+              условия кредита. Выгодные для нашего банка, разумеется.
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
+    <div class="container">
+      <ul class="brands">
+        <li>
+          <a href="#">
+            <img class="brands-img" src="img/logo/logo-1dji.png" width="260" height="100" alt="Логотип DJI">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="brands-img" src="img/logo/logo-2gadgets.png" width="260" height="100" alt="Логотип SP Gadgets">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="brands-img" src="img/logo/logo-3gopro.png" width="260" height="100" alt="Логотип GoPro">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="brands-img" src="img/logo/logo-4vive.png" width="260" height="100" alt="Логотип Vive">
+          </a>
+        </li>
+      </ul>
+    </div>
 
     <section class="info-columns container">
       <h2 class="visually-hidden">Информация</h2>
-
       <div class="about-us info-decoration-line">
         <h2 class="about-us-head">О нас</h2>
         <p class="about-us-info about-us-info-first-paragraph">Огромный выбор гаджетов не оставит
@@ -277,23 +260,15 @@
         </ul>
         <button class="button button-wide" type="button">подробнее о нас</button>
       </div>
-
       <div class="write-us info-decoration-line">
         <h2 class="write-us-head">Контакты</h2>
         <p class="write-us-info">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br>
           проверить работоспособность покупки. Всякое бывает.</p>
-        <div class="popup-link-map">
-          <a class="contacts-button-map" href="map.html">
-            <img src="img/map1.png" width="560" height="222" alt="Карта, г. Москва, ул. Строителей, 15">
-          </a>
-        </div>
-
-        <div class="popup-link-contacts">
-          <a class="write-us-button button button-wide" href="writeus.html">Напишите нам</a>
-        </div>
-
+        <a class="contacts-button-map" href="map.html">
+          <img src="img/map1.png" width="560" height="222" alt="Карта, г. Москва, ул. Строителей, 15">
+        </a>
+        <a class="write-us-button button button-wide" href="writeus.html">Напишите нам</a>
       </div>
-
     </section>
 
   </main>
@@ -302,11 +277,9 @@
     <div class="container">
 
       <div class="footer-first-level">
-
         <a href="index.html">
           <img class="footer-logo" src="img/logo/logo_footer.svg" width="163" height="35" alt="Логотип «DEVICE»">
         </a>
-
         <ul class="footer-site-navigation">
           <li>
             <a class="footer-login-link" href="#">Войти</a>
@@ -318,16 +291,12 @@
             <a class="footer-cart-link" href="#">Корзина</a>
           </li>
         </ul>
-
       </div>
 
-
       <div class="footer-second-level">
-
-        <p class="footer-adress">
+        <p class="footer-adress" tabindex="0">
           г. Москва, ул. Строителей, 15
         </p>
-
         <div class="footer-menu">
           <ul class="footer-menu-list">
             <li>
@@ -341,45 +310,37 @@
             </li>
           </ul>
         </div>
-
         <p class="contacts-phone">
           <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
         </p>
-
       </div>
-
 
       <div class="footer-third-level">
 
-        <div class="footer-social">
-          <ul class="footer-social-list">
-            <li>
-              <a href="#">
-                <span class="visually-hidden">Facebook</span>
-              </a>
+        <ul class="footer-social-list">
+          <li>
+            <a href="#">
+              <span class="visually-hidden">Facebook</span>
               <img class="social-button" src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
-            </li>
-            <li>
-              <a href="#">
-                <span class="visually-hidden">Instagram</span>
-              </a>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="visually-hidden">Instagram</span>
               <img class="social-button" src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
-            </li>
-            <li>
-              <a href="#">
-                <span class="visually-hidden">Twitter</span>
-              </a>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="visually-hidden">Twitter</span>
               <img class="social-button" src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
-            </li>
-          </ul>
-        </div>
-
+            </a>
+          </li>
+        </ul>
         <a class="footer-copywrite" href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
         </a>
-
       </div>
-
 
     </div>
   </footer>
@@ -404,8 +365,6 @@
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
 
-
-
   <section class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <iframe
@@ -413,7 +372,6 @@
       width="960" height="573" allowfullscreen title="Карта, г. Москва, ул. Строителей, 15"></iframe>
     <button class="modal-close modal-close-map" type="button" aria-label="Закрыть"></button>
   </section>
-
 
   <script src="js/script.min.js"></script>
 
