--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body inner-page">
@@ -219,7 +219,6 @@
           </ul>
         </div>
 
-
         <div class="items">
           <ul class="catalog-list">
             <li class="catalog-item" tabindex="0">
@@ -273,9 +272,7 @@
                 </a>
                 <p class="item-price">1 500 руб.</p>
               </div>
-
             </li>
-
 
             <li class="catalog-item catalog-item-new" tabindex="0">
               <div class="item-img-wrapper">
@@ -320,7 +317,6 @@
       </div>
     </div>
   </main>
-
 
   <footer class="main-footer">
     <div class="container">
