--- a/catalog.html
+++ b/catalog.html
@@ -221,7 +221,7 @@
 
         <div class="items">
           <ul class="catalog-list">
-            <li class="catalog-item" tabindex="0">
+            <li class="catalog-item">
               <div class="item-img-wrapper">
                 <img src="img/item/item-1.png" width="360" height="380"
                   alt="Изображение любительской селфи-палки, позволяющей держать устройство в горизонтальном положении, пример крепления к ней телефона">
@@ -238,7 +238,7 @@
               </div>
             </li>
 
-            <li class="catalog-item" tabindex="0">
+            <li class="catalog-item">
               <div class="item-img-wrapper">
                 <img src="img/item/item-2.png" width="360" height="380"
                   alt="Изображение профессиональной селфи-палки, позволяющей держать устройство под разным углом">
@@ -255,7 +255,7 @@
               </div>
             </li>
 
-            <li class="catalog-item" tabindex="0">
+            <li class="catalog-item">
               <div class="item-img-wrapper">
                 <img src="img/item/item-3.png" width="360" height="380"
                   alt="Изображение непотопляемой селфи-палки с прорезиненной ручкой, пример крепления к ней камеры">
@@ -274,7 +274,7 @@
               </div>
             </li>
 
-            <li class="catalog-item catalog-item-new" tabindex="0">
+            <li class="catalog-item catalog-item-new">
               <div class="item-img-wrapper">
                 <img src="img/item/item-4.png" width="360" height="380" alt="Изображение селфи-палки в форме руки">
               </div>
