Добавляет реализацию слайдеров

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
@@ -196,19 +196,19 @@
         </div>
 
         <ul class="service-list">
-          <li class="service-delivery">
+          <li class="service-item service-item-active service-delivery">
             <p class="service-head">Доставка</p>
             <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
               подъезду совершенно бесплатно! Ведь мы неплохо <br>
               заработаем, поднимая его на ваш этаж.</p>
           </li>
-          <li class="service-warranty">
+          <li class="service-item service-warranty">
             <p class="service-head">Гарантия</p>
             <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
               не переживайте, мы выдадим вам новый. <br>
               Товар, не дом, конечно же.<br>
           </li>
-          <li class="service-credit">
+          <li class="service-item service-credit">
             <p class="service-head ">Кредит</p>
             <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
               подберут для вас наиболее выгодные <br>
@@ -373,7 +373,7 @@
     <button class="modal-close modal-close-map" type="button" aria-label="Закрыть"></button>
   </section>
 
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
