Добавлена ссылка на каталог

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="header-second-level">
         <div class="main-menu">
           <div class="catalog-menu-item">
-            <a class="catalog" href="#">каталог товаров</a>
+            <a class="catalog" href="catalog.html">каталог товаров</a>
             <ul class="header-catalog-list">
               <li>
                 <a class="header-catalog-item" href="#">Виртуальная реальность</a>
